# EventPlannerAgent

./: PLAN.md  PRD.md  README.md  index.html  spec.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railpack.json  railway.json
backend/.opencode/: opencode.json
backend/.opencode/agents/: site-builder.md
backend/app/: __init__.py  config.py  main.py
backend/app/cli/: __init__.py  generate_site.py
backend/app/integrations/: browserbase.py  browserbase_automations.py  claude_code.py  image_prompt_smith.py  midjourney.py  midjourney_mcp.py  midjourney_oauth.py  opencode_coder.py  openrouter_auth.py  openrouter_images.py  outreach.py  pika.py  poke.py  site_coder.py  site_generation.py  site_template.py  site_workspace.py  slack.py  supabase.py  token_compression.py  ui_ux_pro_max.py  vercel_deploy.py
backend/app/mcp/: server.py
backend/scripts/: apply_supabase_migration.py  auth_midjourney_mcp.py  check_env.py  connect-poke.sh  deploy_only.py  push_supabase.sh  rebuild_site.py  setup_arize_auth.py  simulate_run.py  test-slack.sh
backend/tests/: test_assets.py  test_browserbase_automations.py  test_dashboard.py  test_event_archive.py  test_image_prompt_smith.py  test_integrations.py  test_mcp.py  test_midjourney_mcp.py  test_opencode_coder.py  test_openrouter_auth.py  test_openrouter_images.py  test_pika.py  test_sai_flow.py  test_site_coder.py  test_site_template.py  test_sites.py  test_slack.py  test_state_machine.py  test_supabase.py  test_ui_ux_pro_max.py  test_vercel_deploy.py
(+68 files in other folders)
