[project]
name = "orchestrateai-backend"
version = "0.1.0"
description = "OrchestrateAI — SMS event planning orchestration backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "fastmcp>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "diskcache>=5.6.0",
    "pathvalidate>=3.0.0",
    "fal-client>=0.5.9",
    "arize-otel>=0.8.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.scripts]
marquee-generate-site = "app.cli.generate_site:main"

[project.optional-dependencies]
browserbase = [
    "browserbase>=1.13.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
